<resources>
    <string name="app_name">SO</string>
    <string name="submitButtom">确认</string>
    <string name="username">用户名为：</string>
    <string name="userid">用户id：</string>
    <string name="centerActivity">中央activity</string>
    <string name="create">创建</string>
    <string name="join">加入</string>
    <string name="message">消息</string>
    <string name="commit">发送</string>
    <string name="chatActivity">聊天Activity</string>
    <string name="messageActivity">消息通知activity</string>
    <string name="requester">申请者</string>
    <string name="ID">ID</string>
    <string name="chatroomID">聊天室ID</string>
</resources>
