<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lb.cn.so.MessageActivity">

    <RelativeLayout
        android:id="@+id/messageRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/sss">
        <TextView
            android:id="@+id/requesternameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requester"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/requesteridTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/ID"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/requestroomidTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/chatroomID"
            android:textSize="25sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/showMessageListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/messageRelativeLayout"
        android:background="@drawable/sss"></ListView>

</RelativeLayout>
